Commit CBC table and test provided by Timothy Wynn
with some miror tweaks.

see https://github.com/liblouis/liblouis/issues/598

--- a/tests/braille-specs/Makefile.am
+++ b/tests/braille-specs/Makefile.am
@@ -42,6 +42,7 @@ EXTRA_DIST =					\
 	en-ueb-math.yaml			\
 	en-ueb-symbols_harness.yaml		\
 	en-ueb-michael-robin.yaml		\
+	en-us-comp6.yaml			\
 	en-us-comp8-ext-back_harness.yaml	\
 	en-us-comp8-ext-for_harness.yaml	\
 	en-us-g2.yaml			\
